[package]
name = "adrift"
version = "0.1.0"
edition = "2021"
description = "A Commercial Advertisement Archival Extraction Tool"
authors = ["Jim McBride <stlalpha@themcbros.com>"]
license = "MIT"
repository = "https://github.com/stlalpha/adrift"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
indicatif = "0.17"
walkdir = "2.4"
rusqlite = { version = "0.29", features = ["bundled"] }